@@ -49,11 +49,11 @@ def generate_child(routes, table_map, reference_map):
 		"private import tango.io.Stdout;\n" +
 		"private import tango.time.chrono.Gregorian;\n" +
 		"private import tango.time.WallClock;\n" +
-		"private import TangoRegex = tango.text.Regex;\n" +
 
 		"\n" +
 		"private import language_helper;\n" +
 		"private import helper;\n" +
+		"private import regex;\n" +
 		"private import rootintootin;\n" +
 		"private import rootintootin_server;\n" +
 		"//private import ui;\n\n"
@@ -150,18 +150,20 @@ def generate_child(routes, table_map, reference_map):
 	out_file.write(
 	"\n\nint main() {\n")
 
+	# Get the number of entries in the routes
+	route_count = 0
+	for i in range(len(routes)):
+		route_count += len(routes.items()[i][1])
+
 	# Write the routes
 	out_file.write(
 	"	// Create the routes\n" + 
-	"	stdout_message(\"Warning! Regex creation and use may be extremely slow.\\n\");\n" + 
-	"	stdout_message(\"This will make startup and requests slow.\\n\");\n" + 
-	"	stdout_message(\"See upstream bug: http://dsource.org/projects/tango/ticket/1119\\n\");\n" + 
-	"	string[TangoRegex.Regex][string][string] routes;\n")
+	"	Regex.init(" + str(route_count) + ");\n" + 
+	"	string[Regex][string][string] routes;\n")
 	for controller_name, route_maps in routes.iteritems():
 		for action_name, route_map in route_maps.iteritems():
 			for uri, method in route_map.iteritems():
-				out_file.write("	routes[\"" + controller_name + "\"][\"" + action_name + "\"][new TangoRegex.Regex(r\"" + uri + "\")] = \"" + method + "\";\n")
-				out_file.write("	stdout_message(\"Creating the regex for: " + controller_name + "." + action_name + " ...\\n\");\n")
+				out_file.write("	routes[\"" + controller_name + "\"][\"" + action_name + "\"][new Regex(r\"" + uri + "\")] = \"" + method + "\";\n")
 
 	out_file.write(
 	"	stdout_message(\"\");\n")
@@ -743,11 +745,13 @@ class BuilderThread(threading.Thread):
 		result += commands.getoutput("ar rcs inotify.a inotify.o")
 		result += commands.getoutput("gcc -g -c file_system.c -o file_system.o")
 		result += commands.getoutput("ar rcs file_system.a file_system.o")
+		result += commands.getoutput("gcc -g -c regex.c -o regex.o")
+		result += commands.getoutput("ar rcs regex.a regex.o")
 		command = "ldc -g -of server server.d " + \
 					"language_helper.d helper.d rootintootin.d ui.d " + \
 					"rootintootin_server.d http_server.d tcp_server.d " + \
 					"parent_process.d child_process.d " + \
-					"db.d db.a inotify.d inotify.a file_system.d file_system.a dornado/ioloop.d " + \
+					"db.d db.a inotify.d inotify.a file_system.d file_system.a regex.a regex.d dornado/ioloop.d " + \
 					" -L=\"-lmysqlclient\" -I /usr/include/d/ldc/ -L /usr/lib/d/libtango-user-ldc.a"
 		result += commands.getoutput(command)
 		print "Build complete"
