@@ -1,7 +1,8 @@
 * Release 0.5.0
 	* Fixed bug #589959: 'gen configure server header_max_size is ignored'.
 	* Fixed Bug #589820: 'Change configuration files to json'.
-	* Fixed Bug #584748: 'Move from Tornado to Dornado '.
+	* Fixed Bug #584748: 'Move from Tornado to Dornado'.
+	* Fixed Bug #584807: 'Startup and requests are extremely slow'.
 
 2010-03-02 Release 0.4.0
 	* Fixed bug #511025: 'Controller template uses wrong view on create fail'.
